# xWinCompiler

./: .gitignore  CMakeLists.txt  README.md  test.xr
src/: generation.hpp  main.cpp  parser.hpp  tokenization.hpp
test/: test  test.asm
